fix links using a baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ theme: jekyll-theme-minimal
 pages_list:
   Archive: '/archive'
 
-github:
-  repo:           github.com/harrysarson/blog
+paginate: 1
+baseurl: "blog"
