--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,4 +28,4 @@ jobs:
       uses: maxheld83/ghpages@v0.2.1
       env:
         BUILD_DIR: "public/"
-        GH_PAT: ${{ secrets.ACCESS_TOKEN }}
+        GH_PAT: ${{ secrets.GH_PAT }}
