--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,6 +13,10 @@ jobs:
       with:
         submodules: true
 
+    - uses: actions/setup-ruby@v1
+      with:
+        ruby-version: '2.5'
+
     - name: Install asciidoctor
       run: sudo apt-get install asciidoctor
 
