--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,7 +18,7 @@ jobs:
         ruby-version: '2.5'
 
     - name: Install asciidoctor
-      run: sudo apt-get install asciidoctor
+      run: gem install asciidoctor
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
